Fix minor spacing at the bottom of graph

--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ body {
   flex-wrap: wrap;
   align-items: flex-start; 
   width: 1072px;
-  height: 1167.55px;
+  height: 950px;
   margin-top: 38px;
   margin-left: 64px;
   background: #FFFFFF;
